--- a/xwiki-commons-core/xwiki-commons-crypto/xwiki-commons-crypto-store/pom.xml
+++ b/xwiki-commons-core/xwiki-commons-crypto/xwiki-commons-crypto-store/pom.xml
@@ -25,7 +25,7 @@
   <parent>
     <artifactId>xwiki-commons-crypto</artifactId>
     <groupId>org.xwiki.commons</groupId>
-    <version>7.3</version>
+    <version>7.3.1-SNAPSHOT</version>
   </parent>
   <artifactId>xwiki-commons-crypto-store</artifactId>
   <packaging>pom</packaging>
