--- a/xwiki-commons-core/xwiki-commons-environment/xwiki-commons-environment-standard/pom.xml
+++ b/xwiki-commons-core/xwiki-commons-environment/xwiki-commons-environment-standard/pom.xml
@@ -25,7 +25,7 @@
   <parent>
     <groupId>org.xwiki.commons</groupId>
     <artifactId>xwiki-commons-environment</artifactId>
-    <version>7.1.4</version>
+    <version>7.1.5-SNAPSHOT</version>
   </parent>
   <artifactId>xwiki-commons-environment-standard</artifactId>
   <name>XWiki Commons - Environment - Standard</name>
