XCOMMONS-917: Cannot serialize org.json objects using $jsontool Added dependency version for org.json:json

--- a/pom.xml
+++ b/pom.xml
@@ -387,6 +387,12 @@
           </exclusion>
         </exclusions>
       </dependency>
+      <!-- Version greater than 20140107 require Java 8 -->
+      <dependency>
+        <groupId>org.json</groupId>
+        <artifactId>json</artifactId>
+        <version>20140107</version>
+      </dependency>
       <dependency>
         <groupId>org.bouncycastle</groupId>
         <artifactId>bcprov-jdk15on</artifactId>
