--- a/xwiki-commons-core/xwiki-commons-classloader/xwiki-commons-classloader-protocols/pom.xml
+++ b/xwiki-commons-core/xwiki-commons-classloader/xwiki-commons-classloader-protocols/pom.xml
@@ -25,7 +25,7 @@
   <parent>
     <groupId>org.xwiki.commons</groupId>
     <artifactId>xwiki-commons-classloader</artifactId>
-    <version>8.0</version>
+    <version>8.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>xwiki-commons-classloader-protocols</artifactId>
   <name>XWiki Commons - ClassLoader - Protocols - Parent POM</name>
