--- a/xwiki-commons-core/xwiki-commons-environment/xwiki-commons-environment-servlet/pom.xml
+++ b/xwiki-commons-core/xwiki-commons-environment/xwiki-commons-environment-servlet/pom.xml
@@ -25,7 +25,7 @@
   <parent>
     <groupId>org.xwiki.commons</groupId>
     <artifactId>xwiki-commons-environment</artifactId>
-    <version>8.0</version>
+    <version>8.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>xwiki-commons-environment-servlet</artifactId>
   <name>XWiki Commons - Environment - Servlet</name>
